<resources>
    <string name="admob_application_id" translatable="false">ca-app-pub-2222869408518511~9607465111</string>
    <string name="please_wait" translatable="false">Please wait!</string>
    <string name="app_name" translatable="false">Pion base</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="loading_ads">Loading Ads</string>
    <string name="something_error">Something error</string>
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="loading_data">Loading data</string>
    <string name="setting">Setting</string>
    <string name="general_setting">General setting</string>
    <string name="information_about">Information about</string>
    <string name="developer">Developer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="gdpr">GDPR</string>
    <string name="store_name">Store Name:</string>
    <string name="website">Website:</string>
    <string name="why_do_you_see_ads">Why do you see Ads?</string>
    <string name="des_advertisement_1">For production and development, we need funding, one of which comes from advertisment revenue</string>
    <string name="des_advertisment_2">1. To remove ads, you can support us by purchasing the premium version or the ad-removed version.</string>
    <string name="des_advertisement_3">2. Contact us by email to be considered for participation in the pilot program, from which you can use versions with less ads but may not be optimized for performance.</string>
    <string name="what_ads_type_do_we_use">What Ads type do we use?</string>
    <string name="des_advertisement_4">We are associated with many ad network partners and the largest is Google Ad for major ad formats</string>
    <string name="des_5">- Full screen ads interspersed between screens</string>
    <string name="des_6">- Banner, native ads are customized as a component of AD (usually with a yellow label)</string>
    <string name="des_7">We are always trying to balance the user experience and advertisement</string>

    <!-- Accessibility Service Strings -->
    <string name="accessibility_service_description">Dịch vụ này giúp phát hiện popup quảng cáo bất thường từ các ứng dụng khác. Dịch vụ sẽ phân tích nội dung hiển thị trên màn hình để xác định các popup quảng cáo và thông báo cho bạn.</string>
    <string name="popup_detection_title">Phát hiện Popup</string>
    <string name="popup_detected_message">Đã phát hiện popup quảng cáo từ %1$s</string>
    <string name="enable_accessibility_service">Bật dịch vụ phát hiện popup</string>
    <string name="accessibility_service_disabled">Dịch vụ phát hiện popup chưa được bật</string>
    <string name="go_to_accessibility_settings">Đi tới cài đặt</string>
    <string name="popup_detector">Popup Detector</string>
    <string name="scan_popup_ad">(Scan Popup AD)</string>
    <string name="check_hidden_apps">Check Hidden Apps</string>
    <string name="notification_control">Notification Control</string>
    <string name="hibernate_app">Hibernate App</string>
    <string name="show_concerns">Show Concerns</string>
    <string name="uncover_hidden_threats_our_deep_scan_finds_spyware_and_malicious_apps_that_operate_by_being_invisible_or_disguised">Uncover hidden threats. Our deep scan finds spyware and malicious apps that operate by being invisible or disguised.</string>
    <string name="start_scan">Start Scan</string>
    <string name="stay_on_this_screen_while_the_system_is_scanning">Stay on this screen while the system is scanning.</string>
    <string name="scanning">Scanning</string>
    <string name="user_installed_apps">User-installed apps</string>
    <string name="system_apps">System apps</string>
    <string name="no_hidden_apps_found">No hidden apps found</string>
    <string name="no_item">No item</string>
    <string name="start_manager">Start Manager</string>
    <string name="notification_stats">Notification Stats</string>
    <string name="block">Block</string>
    <string name="this_app_cannot_block_certain_critical_notifications_including">This app cannot block certain critical notifications, including:</string>
    <string name="got_it">Got it</string>
    <string name="ongoing_calls">Ongoing calls</string>
    <string name="active_services">Active services (like our own "Manager is running" notification)</string>
    <string name="system_warnings_low_battery_errors">System warnings (low battery, errors...)</string>
    <string name="failed_to_load">Failed to load: %1$s</string>
    <string name="block_notifications">Block Notifications?</string>
    <string name="tv_sub_title_confirm_block_notification">Are you sure you want to block all notifications from Facebook? \n You will no longer receive any messages, comments, or reminders. You can always unblock this later.</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search...</string>
    <string name="special_access_required">Special Access Required</string>
    <string name="tv_sub_title_request_notification_listener">This feature needs \"Notification Access\" permission to work. You will be taken to System Settings to grant it</string>
    <string name="open_setting_amp_grant"><![CDATA[Open setting & Grant]]></string>
    <string name="check_popup_ads">Check Popup ADS</string>
    <string name="you_need_to_grant_permission_to_use_this_feature">You need to grant permission to use this feature.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="switch_start_manager_to_turn_on_this_function">Switch “Start Manager” to turn on this function.</string>
    <string name="now_listening">Now Listening...</string>
    <string name="the_manager_is_now_active_we_are_monitoring_for_new_notifications">The manager is now active. We are monitoring for new notifications.</string>
    <string name="as_soon_as_an_app_sends_a_notification_it_will_appear_here_with_a_detailed_count">As soon as an app sends a notification, it will appear here with a detailed count.</string>
    <string name="failed_to_load_recent_notifications">Failed to load recent notifications: %1$s</string>
    
    <!-- DateTime formatting strings -->
    <string name="time_just_now">Just now</string>
    <string name="time_minutes_ago">min ago</string>
    <string name="time_yesterday_format">Yesterday</string>
    <string name="time_day_format">day</string>
    <string name="time_month_day_format">month day</string>
    
    <!-- Test notification -->
    <string name="test_notification_service">Test Notification Service</string>
    <string name="test_notification_sent">Test notification sent successfully</string>
    <string name="test_notification_failed">Failed to send test notification: %1$s</string>
</resources>