<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_test_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="16dp"
        android:text="@string/test_notification_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_test_notification"
        tools:listitem="@layout/item_app_notification_stats" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_empty_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/ic_now_listening" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_600"
            android:gravity="center"
            android:text="@string/now_listening"
            android:textColor="#3A3A3F"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/font_500"
            android:gravity="center"
            android:text="@string/the_manager_is_now_active_we_are_monitoring_for_new_notifications"
            android:textColor="#82858E"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/font_500"
            android:gravity="center"
            android:text="@string/as_soon_as_an_app_sends_a_notification_it_will_appear_here_with_a_detailed_count"
            android:textColor="#82858E"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>