<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_4dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back_empty"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_12dp"
        android:padding="@dimen/_4dp"
        android:src="@drawable/ic_back"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_600"
        android:text="@string/check_hidden_apps"
        android:textColor="#3A3A3F"
        android:textSize="@dimen/_22sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toStartOf="@id/btn_back_empty"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_20dp"
        app:layout_constraintBottom_toTopOf="@id/layoutAds"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_marginBottom="@dimen/_10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_16dp"
            app:cardElevation="@dimen/_2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_container_scan_hidden_app">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_start_scan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_magnifier_scan_hidden_app"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_48dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_magnifier_scan_hidden_app"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.59" />

                    <TextView
                        android:id="@+id/tv_sub_title_start_scan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_24dp"
                        android:fontFamily="@font/font_600"
                        android:gravity="center"
                        android:text="@string/uncover_hidden_threats_our_deep_scan_finds_spyware_and_malicious_apps_that_operate_by_being_invisible_or_disguised"
                        android:textColor="#3A3A3F"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_magnifier_scan_hidden_app"
                        app:layout_constraintWidth_percent="0.8" />

                    <TextView
                        android:id="@+id/btn_start_scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_32dp"
                        android:backgroundTint="#43BDFF"
                        android:fontFamily="@font/font_500"
                        android:paddingHorizontal="@dimen/_12dp"
                        android:paddingVertical="@dimen/_8dp"
                        android:text="@string/start_scan"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp"
                        android:theme="@style/RoundedCorner.8"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sub_title_start_scan" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_scanning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/_56dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_scanning"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_10dp"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.9"
                        app:lottie_autoPlay="false"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/lottie_scanning_hidden_app" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@id/lottie_scanning"
                        app:layout_constraintEnd_toEndOf="@id/lottie_scanning"
                        app:layout_constraintStart_toStartOf="@id/lottie_scanning"
                        app:layout_constraintTop_toTopOf="@id/lottie_scanning">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font_600"
                            android:text="@string/scanning"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_18sp" />

                        <TextView
                            android:id="@+id/tv_time_scanning"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4dp"
                            android:fontFamily="@font/font_400"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sp"
                            tools:text="15s" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_sub_title_scanning"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_32dp"
                        android:fontFamily="@font/font_600"
                        android:gravity="center"
                        android:text="@string/stay_on_this_screen_while_the_system_is_scanning"
                        android:textColor="#3A3A3F"
                        android:textSize="@dimen/_16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lottie_scanning"
                        app:layout_constraintWidth_percent="0.8" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>

    <FrameLayout
        android:id="@+id/layoutAds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="360:70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/adViewGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/bg_ads">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/loading_ads"
                android:textColor="@color/black" />

        </FrameLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>